Simplify ExternalSerializationAndDeserializationSample by removing buffers and print serialized file content in hex format.